# naylence-core-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/naylence/fame/core/: __init__.py  fame_fabric.py  fame_fabric_config.py  fame_fabric_factory.py
src/naylence/fame/core/address/: __init__.py  address.py
src/naylence/fame/core/connector/: connector.py  connector_state.py
src/naylence/fame/core/protocol/: delivery_context.py  envelope.py  frames.py  security_settings.py
src/naylence/fame/core/service/: fame_service.py
src/naylence/fame/core/util/: expression_evaluator.py  expression_policy.py  expressions.py  extension_manager.py  repr.py  resource_config.py  resource_factory.py  resource_factory_registry.py
tests/naylence/fame/core/: test_expression_evaluation.py  test_priority_integration.py  test_priority_system.py
tests/naylence/fame/core/address/: test_address_host_notation.py
tests/naylence/fame/core/protocol/: test_security_profile_integration.py
