[project]
name = "naylence-core"
version = "0.1.9"
description = "Naylence Core"
authors = [
    {name = "Naylence Dev",email = "naylencedev@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
packages = [
  { include = "naylence", from = "src"},
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.10"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
